# rmrk-substrate

./: .gitignore  rmrk-rpc.md
node/: Cargo.toml
node/src/: rpc.rs
pallets/rmrk-core/: Cargo.toml
pallets/rmrk-core/src/: functions.rs  lib.rs
pallets/rmrk-equip/: Cargo.toml
pallets/rmrk-equip/src/: functions.rs  lib.rs  tests.rs
pallets/rmrk-market/: Cargo.toml
pallets/rmrk-market/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
tests/: package-lock.json  package.json
tests/src/: acceptNft.test.ts  addNftResource.test.ts  addTheme.test.ts  createBase.test.ts  createCollection.test.ts  createNFT.test.ts  createNft.test.ts  deleteCollection.test.ts  deleteCollections.test.ts  equipNft.test.ts  getOwnedNfts.test.ts  lockCollection.test.ts  lockCollectionMint.test.ts  mintNft.test.ts  sendNft.test.ts  setNftProperty.test.ts  setResourcePriorities.test.ts  unequipNft.test.ts
tests/src/interfaces/: augment-api-consts.ts  augment-api-errors.ts  augment-api-events.ts  augment-api-query.ts  augment-api-rpc.ts  augment-api-tx.ts  augment-types.ts  lookup.ts  metadata.json  types-lookup.ts
tests/src/substrate/: substrate-api.ts
tests/src/util/: acceptNft.ts  addTheme.ts  changeIssuerCollection.ts  createBase.ts  createCollection.ts  deleteCollection.ts  fetch.ts  getBase.ts  getChildren.ts  getNft.ts  (+11 more)
traits/: Cargo.toml
traits/src/: base.rs  bounded_serde.rs  collection.rs  lib.rs  nft.rs  part.rs  phantom_type.rs  priority.rs  property.rs  resource.rs  theme.rs
types/: Cargo.toml
types/src/: lib.rs
(+2 files in other folders)
